set(Sources
    LexA68k.cxx
    LexAbaqus.cxx
    LexAda.cxx
    LexAPDL.cxx
    LexAsm.cxx
    LexAsn1.cxx
    LexASY.cxx
    LexAU3.cxx
    LexAVE.cxx
    LexAVS.cxx
    LexBaan.cxx
    LexBash.cxx
    LexBasic.cxx
    LexBibTeX.cxx
    LexBullant.cxx
    LexCaml.cxx
    LexCLW.cxx
    LexCmake.cxx
    LexCOBOL.cxx
    LexCoffeeScript.cxx
    LexConf.cxx
    LexCPP.cxx
    LexCrontab.cxx
    LexCsound.cxx
    LexCSS.cxx
    LexD.cxx
    LexDMAP.cxx
    LexDMIS.cxx
    LexECL.cxx
    LexEiffel.cxx
    LexErlang.cxx
    LexEScript.cxx
    LexFlagship.cxx
    LexForth.cxx
    LexFortran.cxx
    LexGAP.cxx
    LexGui4Cli.cxx
    LexHaskell.cxx
    LexHex.cxx
    LexHTML.cxx
    LexInno.cxx
    LexKix.cxx
    LexKVIrc.cxx
    LexLaTeX.cxx
    LexLisp.cxx
    LexLout.cxx
    LexLua.cxx
    LexMagik.cxx
    LexMarkdown.cxx
    LexMatlab.cxx
    LexMetapost.cxx
    LexMMIXAL.cxx
    LexModula.cxx
    LexMPT.cxx
    LexMSSQL.cxx
    LexMySQL.cxx
    LexNimrod.cxx
    LexNsis.cxx
    LexOpal.cxx
    LexOScript.cxx
    LexOthers.cxx
    LexPascal.cxx
    LexPB.cxx
    LexPerl.cxx
    LexPLM.cxx
    LexPO.cxx
    LexPOV.cxx
    LexPowerPro.cxx
    LexPowerShell.cxx
    LexProgress.cxx
    LexPS.cxx
    LexPython.cxx
    LexR.cxx
    LexRebol.cxx
    LexRegistry.cxx
    LexRuby.cxx
    LexRust.cxx
    LexScriptol.cxx
    LexSmalltalk.cxx
    LexSML.cxx
    LexSorcus.cxx
    LexSpecman.cxx
    LexSpice.cxx
    LexSQL.cxx
    LexSTTXT.cxx
    LexTACL.cxx
    LexTADS3.cxx
    LexTAL.cxx
    LexTCL.cxx
    LexTCMD.cxx
    LexTeX.cxx
    LexTxt2tags.cxx
    LexVB.cxx
    LexVerilog.cxx
    LexVHDL.cxx
    LexVisualProlog.cxx
    LexYAML.cxx
)

add_library(Lexers
    STATIC
    ${Sources}
)

target_include_directories(Lexers
   PUBLIC
   $<TARGET_PROPERTY:LexLib,INTERFACE_INCLUDE_DIRECTORIES>
)
