set(Sources
    XPM.cxx
    ViewStyle.cxx
    UniConversion.cxx
    Style.cxx
    Selection.cxx
    ScintillaBase.cxx
    RunStyles.cxx
    RESearch.cxx
    PositionCache.cxx
    PerLine.cxx
    MarginView.cxx
    LineMarker.cxx
    KeyMap.cxx
    Indicator.cxx
    ExternalLexer.cxx
    EditView.cxx
    Editor.cxx
    EditModel.cxx
    Document.cxx
    Decoration.cxx
    ContractionState.cxx
    CharClassify.cxx
    CellBuffer.cxx
    Catalogue.cxx
    CaseFolder.cxx
    CaseConvert.cxx
    CallTip.cxx
    AutoComplete.cxx
)

set(Headers
    XPM.h
    ViewStyle.h
    UniConversion.h
    UnicodeFromUTF8.h
    Style.h
    SplitVector.h
    Selection.h
    ScintillaBase.h
    RunStyles.h
    RESearch.h
    PositionCache.h
    PerLine.h
    Partitioning.h
    LineMarker.h
    KeyMap.h
    Indicator.h
    FontQuality.h
    ExternalLexer.h
    Editor.h
    Document.h
    Decoration.h
    ContractionState.h
    CharClassify.h
    CellBuffer.h
    Catalogue.h
    CaseFolder.h
    CaseConvert.h
    CallTip.h
    AutoComplete.h
)

add_library(Scintilla
    STATIC
    ${Sources}
    ${Headers}
    ${ScintillaPublicHeaders}
)

target_include_directories(Scintilla
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    $<TARGET_PROPERTY:Lexers,INTERFACE_INCLUDE_DIRECTORIES>
)
